--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
       </section>
       <!--3 section-->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-card-list list">
@@ -429,7 +429,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- 4 section -->
       <section class="section customers">
         <div class="container">
@@ -506,8 +506,8 @@
         </div>
       </section>
     </main>
-    <!-- <footer>
-      <div class="container footer-wrapper">
+    <footer>
+      <div class="container container-footer footer-wrapper">
         <div class="footer-info">
           <a class="logo-footer link" href=""
             >WEB<span class="logo-light">STUDIO</span></a
@@ -519,7 +519,7 @@
         </div>
         <div class="social-media">
           <p class="social-text">Social media</p>
-          <ul class="socials list">
+          <ul class="social-list list">
             <li class="social-item">
               <a
                 class="social-link footer-link link"
@@ -593,7 +593,7 @@
           </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
     <!--  -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
