--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   ./images/section-2/img-1_360.jpg 360w,
                   ./images/section-2/img-1_720.jpg 720w
                 "
-                sizes="(min-width: 1200px) 360px, (min-width: 768px), (min-width: 480px)"
+                sizes="(min-width: 1200px) 360px, (min-width: 768px) 450px, (min-width: 480px) 418px, 100vw"
                 class="gallery-img"
                 src="./images/section-2/img-1_360.jpg"
                 alt="analytics"
@@ -165,7 +165,7 @@
                   ./images/section-2/img-2_360.jpg 360w,
                   ./images/section-2/img-2_720.jpg 720w
                 "
-                sizes="(min-width: 1200px) 360px, (min-width: 768px), (min-width: 480px)"
+                sizes="(min-width: 1200px) 360px, (min-width: 768px) 450px, (min-width: 480px) 418px, 100vw"
                 class="gallery-img"
                 src="./images/section-2/img-2_360.jpg"
                 alt="messenger"
@@ -180,7 +180,7 @@
                   ./images/section-2/img-3_360.jpg 360w,
                   ./images/section-2/img-3_720.jpg 720w
                 "
-                sizes="(min-width: 1200px) 360px, (min-width: 768px), (min-width: 480px)"
+                sizes="(min-width: 1200px) 360px, (min-width: 768px) 450px, (min-width: 480px) 418px, 100vw"
                 class="gallery-img"
                 src="./images/section-2/img-3_360.jpg"
                 alt="phone and laptop synchronization"
