--- a/index.html
+++ b/index.html
@@ -821,15 +821,11 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="" class="mobile-page link">Studio</a></li>
+        <li><a href="" class="mobile-page current link">Studio</a></li>
         <li
           ><a href="./portfolio.html" class="mobile-page link">Portfolio</a></li
         >
-        <li
-          ><a href="" class="mobile-page current contact-page link"
-            >Contacts</a
-          ></li
-        >
+        <li><a href="" class="mobile-page contact-page link">Contacts</a></li>
       </ul>
       <ul class="contact-menu list">
         <li class="contact-menu-item">
